cloud-native-app-frontend/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-native-app-frontend
  annotations:
    alb.ingress.kubernetes.io/group.name: demo-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # ✅ Health check (IMPORTANT)
    alb.ingress.kubernetes.io/healthcheck-path: /wp-login.php

    # ✅ HTTP + HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # ✅ SSL
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:741616023974:certificate/a118ec68-3e2e-4be5-b61a-f3e66dcafda0
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  ingressClassName: alb
  rules:
  - host: cloud-native-app-frontend-stage.showmysite.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stage-cloud-native-app-frontend
            port:
              number: 8080
